k8s/api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  minReadySeconds: 60
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: registry.cn-beijing.aliyuncs.com/wdora/aidoor-api:20250721133604
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: identity
              mountPath: /app/keys
      volumes:
        - name: identity
          configMap:
            name: identity
      terminationGracePeriodSeconds: 180
